Fix scrollbar;

--- a/src/picturepark-sdk-v1-angular/src/app/content-picker/content-picker.component.scss
+++ b/src/picturepark-sdk-v1-angular/src/app/content-picker/content-picker.component.scss
@@ -21,6 +21,10 @@
   width: 100%;
 }
 
+.mat-drawer-content {
+  overflow: unset;
+}
+
 .content-picker-content {
     display: flex;
     height: calc(100vh - 64px);
